# biofilm-simulation

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  environment.yml  make.sh
scripts/: animate.py
src/: CMakeLists.txt  cli.cpp  cli.hpp  components.hpp  consumption_system.cpp  consumption_system.hpp  copy_system.cpp  copy_system.hpp  data.hpp  diffusion_system.cpp  diffusion_system.hpp  entities.hpp  growth_system.cpp  growth_system.hpp  initializers.cpp  initializers.hpp  neighbors.cpp  neighbors.hpp  simulation.cpp  simulation.hpp  utilities.cpp  utilities.hpp
